styles.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

#root,
#__next {
    isolation: isolate;
}

:root {
    --headings: #493628;
    --content: #54473f;
    --light: #e4e0e1;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}
header {
    margin: 0;
    padding: 0;
    border: 0;
    position: relative;
}
ul {
    margin: 0;
}
body {
    display: flex;
    flex-direction: column;
    gap: 4rem;
    background-color: var(--light);
}
.navlist {
    list-style: none;
    display: flex;
    gap: 12px;
    /* background-color: #c7ffd8; */
    padding: 20px;
}

.logo {
    margin-right: auto;
    font-size: 20px;
    font-family: "Nunito", sans-serif;
    font-optical-sizing: auto;
    font-weight: bold;
    font-style: normal;
}

header {
    color: var(--light);
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    /* font-weight:; */
    font-style: normal;
}

.navlist a {
    text-decoration: none;
    color: inherit;
}

.hero {
    /* background: url("assets/images/cover-image.jpg"); */
    height: 100vh;
    width: 100%;
    background-size: cover;
    display: flex;
    flex-direction: column;
}

.first-section {
    /* background: linear-gradient(-45deg, #0b2f9f, #98ded9, #c7ffd8); */
    background: linear-gradient(-45deg, #54473f, #493628, #ab886d, #cbd2a4);
    background-size: 400% 400%;
    animation: grad 15s ease infinite;
}

@keyframes grad {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100%;
    }
    100% {
        background-position: 0% 50%;
    }
}

.hero-title {
    display: flex;
    justify-content: center;
}

header,
.logo {
    font-family: "Afacad Flux", serif;
    font-optical-sizing: auto;
    /* font-weight: <weight>; */
    font-style: normal;
    font-variation-settings: "slnt" 0;
    font-size: 1.5rem;
}

.hero-title,
.admin-heading,
.booking-heading {
    font-family: "Slabo 27px", serif;
    font-weight: 1000;
    font-style: normal;
    font-size: 6rem;
    color: var(--light);
    padding-bottom: 20%;
}

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
}

.admin-heading,
.booking-heading {
    display: flex;
    justify-content: center;
    font-size: 4rem;
    color: var(--headings);
    padding-bottom: 4rem;
}

.admin {
    background-color: var(--light);
}

.card-title,
h5 {
    font-family: "Slabo 27px", serif;
    font-weight: 1000;
    font-style: normal;
    word-spacing: 0.25em;
    color: var(--headings);
}

.card-text,
button,
p,
ul,
li {
    font-family: "Afacad Flux", serif;
    font-optical-sizing: auto;
    /* font-weight: <weight>; */
    font-style: normal;
    font-variation-settings: "slnt" 0;
    font-size: 1.3rem;
    word-spacing: 0.25em;
}

.card-text {
    color: var(--content);
}

.booking-heading {
    padding-top: 4rem;
}

button:hover {
    background-color: var() !important;
    color: var(--headings) !important;
}

.hero-title {
    padding-bottom: 7%;
}

input,
label {
    font-family: "Afacad Flux", serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings: "slnt" 0;
}

ul {
    color: var(--content);
}

